Added 3 new strings

--- a/message_ca.properties
+++ b/message_ca.properties
@@ -1,6 +1,7 @@
 navbar.title=Servidors SCP: SL
 navbar.server-list=Llista de servidors
 navbar.all-stats=Estadístiques completes
+navbar.all-server-map=Map of all servers
 select.empty=Res seleccionat
 filter-option.server-search.name=Cercar servidor
 filter-option.server-search.placeholder=Introdueix els termes de cerca
@@ -65,3 +66,5 @@ all-stats.users.select-compare-country.name=Seleccionar País
 all-stats.users.select-compare-country.reset-btn=Esborrar selecció de País
 all-stats.users.graph.all-country=Tots els països
 all-stats.users.empty-country-data=No hi ha dades per al país "{countryName}".
+all-server-map.title=Map of all servers
+all-server-map.server-info-btn=Click to check server info
