--- a/message_en.properties
+++ b/message_en.properties
@@ -1,6 +1,7 @@
 navbar.title=SCP: SL Servers
 navbar.server-list=Server List
 navbar.all-stats=Full statistics
+navbar.all-server-map=Map of all servers
 select.empty=Nothing selected
 filter-option.server-search.name=Server Search
 filter-option.server-search.placeholder=Enter search terms
@@ -65,3 +66,5 @@ all-stats.users.select-compare-country.name=Select Country
 all-stats.users.select-compare-country.reset-btn=Reset country selection
 all-stats.users.graph.all-country=All countries
 all-stats.users.empty-country-data=No data exists for the country "{countryName}".
+all-server-map.title=Map of all servers
+all-server-map.server-info-btn=Click to check server info
