--- a/message_ko.properties
+++ b/message_ko.properties
@@ -1,6 +1,7 @@
 navbar.title=SCP: SL 서버 목록
 navbar.server-list=서버 목록
 navbar.all-stats=전체 통계
+navbar.all-server-map=전체 서버 지도
 select.empty=항목을 선택해주세요
 filter-option.server-search.name=서버 검색
 filter-option.server-search.placeholder=검색어 입력
@@ -66,3 +67,5 @@ all-stats.users.select-compare-country.name=비교할 국가 선택
 all-stats.users.select-compare-country.reset-btn=국가 선택 초기화
 all-stats.users.graph.all-country=모든 국가
 all-stats.users.empty-country-data="{countryName}" 국가에 대한 데이터가 존재하지 않습니다.
+all-server-map.title=전체 서버 지도
+all-server-map.server-info-btn=클릭하여 서버 정보 확인
