--- a/message_pl.properties
+++ b/message_pl.properties
@@ -1,6 +1,7 @@
 navbar.title=SCP: SL Serwery
 navbar.server-list=Lista serwerów
 navbar.all-stats=Ogólne statystyki
+navbar.all-server-map=Map of all servers
 select.empty=Nie wybrano
 filter-option.server-search.name=Znajdz serwer
 filter-option.server-search.placeholder=Wprowadz nazwe serwera
@@ -65,3 +66,5 @@ all-stats.users.select-compare-country.name=Wybierz kraj
 all-stats.users.select-compare-country.reset-btn=Zresetuj wybór kraju
 all-stats.users.graph.all-country=Wszystkie kraje
 all-stats.users.empty-country-data=Brak danych dla kraju "{countryName}".
+all-server-map.title=Map of all servers
+all-server-map.server-info-btn=Click to check server info
