--- a/message_uk.properties
+++ b/message_uk.properties
@@ -1,6 +1,7 @@
 navbar.title=Сервера SCP: SL
 navbar.server-list=Список серверів
 navbar.all-stats=Повна статистика
+navbar.all-server-map=Map of all servers
 select.empty=Нічого не вибрано
 filter-option.server-search.name=Пошук серверів
 filter-option.server-search.placeholder=Введіть умови пошуку
@@ -66,3 +67,5 @@ all-stats.users.select-compare-country.name=Виберіть країну
 all-stats.users.select-compare-country.reset-btn=Скинути вибір країни
 all-stats.users.graph.all-country=Всі країни
 all-stats.users.empty-country-data=Дані про країну відсутні "{countryName}".
+all-server-map.title=Map of all servers
+all-server-map.server-info-btn=Click to check server info
