--- a/message_zh.properties
+++ b/message_zh.properties
@@ -1,6 +1,7 @@
 navbar.title=SCP: SL 服务器
 navbar.server-list=服务器列表
 navbar.all-stats=总体信息概况
+navbar.all-server-map=Map of all servers
 select.empty=未选择
 filter-option.server-search.name=查找服务器
 filter-option.server-search.placeholder=请键入关键字
@@ -65,3 +66,5 @@ all-stats.users.select-compare-country.name=查看指定国家/地区
 all-stats.users.select-compare-country.reset-btn=重置国家/地区过滤
 all-stats.users.graph.all-country=所有国家/地区
 all-stats.users.empty-country-data=嘤嘤嘤,还妹有 "{countryName}" 的信息呢
+all-server-map.title=Map of all servers
+all-server-map.server-info-btn=Click to check server info
