--- a/message_es.properties
+++ b/message_es.properties
@@ -1,6 +1,7 @@
 navbar.title=Servidores SCP: SL
 navbar.server-list=Lista de servidores
 navbar.all-stats=Estadísticas completas
+navbar.all-server-map=Map of all servers
 select.empty=Nada seleccionado
 filter-option.server-search.name=Buscar Servidor
 filter-option.server-search.placeholder=Introduce los términos de búsqueda
@@ -65,3 +66,5 @@ all-stats.users.select-compare-country.name=Seleccionar País
 all-stats.users.select-compare-country.reset-btn=Borrar selección de País
 all-stats.users.graph.all-country=Todos los Países
 all-stats.users.empty-country-data=No hay datos para el País "{countryName}".
+all-server-map.title=Map of all servers
+all-server-map.server-info-btn=Click to check server info
