--- a/message_ru.properties
+++ b/message_ru.properties
@@ -1,6 +1,7 @@
 navbar.title=Сервера SCP: SL
 navbar.server-list=Список серверов
 navbar.all-stats=Полная статистика
+navbar.all-server-map=Map of all servers
 select.empty=Ничего не выбрано
 filter-option.server-search.name=Поиск сервера
 filter-option.server-search.placeholder=Введите условия поиска
@@ -66,3 +67,5 @@ all-stats.users.select-compare-country.name=Выберите страну
 all-stats.users.select-compare-country.reset-btn=Сбросить выбор страны
 all-stats.users.graph.all-country=Все страны
 all-stats.users.empty-country-data=Нет данных по стране "{countryName}".
+all-server-map.title=Map of all servers
+all-server-map.server-info-btn=Click to check server info
