전체 서버 유저 수 그래프에 모든 국가 데이터 표시 설정 추가

--- a/message_fr.properties
+++ b/message_fr.properties
@@ -64,6 +64,7 @@ cookie.notice.link-text=En savoir plus
 all-stats.users.title=Nombre total d’utilisateur de serveurs
 all-stats.users.select-compare-country.name=Sélectionner un pays
 all-stats.users.select-compare-country.reset-btn=Réinitialiser la sélection de pays
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Tous les pays
 all-stats.users.empty-country-data=Il n’y a aucunes donnés pour le pays "{countryName}".
 all-server-map.title=Carte de tous les serveurs
