--- a/message_ko.properties
+++ b/message_ko.properties
@@ -65,6 +65,7 @@ cookie.notice.link-text=더 알아보기
 all-stats.users.title=전체 서버 유저 수
 all-stats.users.select-compare-country.name=비교할 국가 선택
 all-stats.users.select-compare-country.reset-btn=국가 선택 초기화
+all-stats.users.show-all.name=모든 국가 데이터 표시
 all-stats.users.graph.all-country=모든 국가
 all-stats.users.empty-country-data="{countryName}" 국가에 대한 데이터가 존재하지 않습니다.
 all-server-map.title=전체 서버 지도
