--- a/message_ru.properties
+++ b/message_ru.properties
@@ -65,6 +65,7 @@ cookie.notice.link-text=Узнать больше
 all-stats.users.title=Общее количество пользователей серверов
 all-stats.users.select-compare-country.name=Выберите страну
 all-stats.users.select-compare-country.reset-btn=Сбросить выбор страны
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Все страны
 all-stats.users.empty-country-data=Нет данных по стране "{countryName}".
 all-server-map.title=Карта всех серверов
