--- a/message_tr.properties
+++ b/message_tr.properties
@@ -64,6 +64,7 @@ cookie.notice.link-text=Daha fazla bilgi edin
 all-stats.users.title=Total number of server users
 all-stats.users.select-compare-country.name=Ülke Seç
 all-stats.users.select-compare-country.reset-btn=Ülke Seçimini Sıfırla
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Tüm Ülkeler
 all-stats.users.empty-country-data="{countryName}" için veri bulunamadı
 all-server-map.title=Sunucuların Dünya Haritası
