--- a/message_uk.properties
+++ b/message_uk.properties
@@ -65,6 +65,7 @@ cookie.notice.link-text=Дізнатися більше
 all-stats.users.title=Загальна кількість користувачів серверів
 all-stats.users.select-compare-country.name=Виберіть країну
 all-stats.users.select-compare-country.reset-btn=Скинути вибір країни
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Всі країни
 all-stats.users.empty-country-data=Дані про країну відсутні "{countryName}".
 all-server-map.title=Карта всіх серверів
