--- a/message_zh.properties
+++ b/message_zh.properties
@@ -64,6 +64,7 @@ cookie.notice.link-text=点我来了解详情喵~
 all-stats.users.title=在线服务器玩家总数
 all-stats.users.select-compare-country.name=查看指定国家/地区
 all-stats.users.select-compare-country.reset-btn=重置国家/地区过滤
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=所有国家/地区
 all-stats.users.empty-country-data=嘤嘤嘤,还妹有 "{countryName}" 的信息呢
 all-server-map.title=服务器大地图
