--- a/message_ca.properties
+++ b/message_ca.properties
@@ -64,6 +64,7 @@ cookie.notice.link-text=Saber més
 all-stats.users.title=Nombre total d'usuaris en el servidor
 all-stats.users.select-compare-country.name=Seleccionar País
 all-stats.users.select-compare-country.reset-btn=Esborrar selecció de País
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Tots els països
 all-stats.users.empty-country-data=No hi ha dades per al país "{countryName}".
 all-server-map.title=Map of all servers
