--- a/message_es.properties
+++ b/message_es.properties
@@ -64,6 +64,7 @@ cookie.notice.link-text=Saber más
 all-stats.users.title=Número total de usuarios en el servidor
 all-stats.users.select-compare-country.name=Seleccionar País
 all-stats.users.select-compare-country.reset-btn=Borrar selección de País
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Todos los Países
 all-stats.users.empty-country-data=No hay datos para el País "{countryName}".
 all-server-map.title=Mapa de todos los servidores
