--- a/message_pl.properties
+++ b/message_pl.properties
@@ -64,6 +64,7 @@ cookie.notice.link-text=Przeczytaj więcej
 all-stats.users.title=Całkowita liczba użytkowników serwerów
 all-stats.users.select-compare-country.name=Wybierz kraj
 all-stats.users.select-compare-country.reset-btn=Zresetuj wybór kraju
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Wszystkie kraje
 all-stats.users.empty-country-data=Brak danych dla kraju "{countryName}".
 all-server-map.title=Mapa serwerów
