전체 통계에 모드 로더 통계 추가

--- a/message_ca.properties
+++ b/message_ca.properties
@@ -67,5 +67,7 @@ all-stats.users.select-compare-country.reset-btn=Esborrar selecció de País
 all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Tots els països
 all-stats.users.empty-country-data=No hi ha dades per al país "{countryName}".
+all-stats.mod-loader.title=Mod loader statistics
+all-stats.mod-loader.tooltip=Mod Loader
 all-server-map.title=Map of all servers
 all-server-map.server-info-btn=Click to check server info
