--- a/message_fr.properties
+++ b/message_fr.properties
@@ -67,5 +67,7 @@ all-stats.users.select-compare-country.reset-btn=Réinitialiser la sélection de
 all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Tous les pays
 all-stats.users.empty-country-data=Il n’y a aucunes donnés pour le pays "{countryName}".
+all-stats.mod-loader.title=Mod loader statistics
+all-stats.mod-loader.tooltip=Mod Loader
 all-server-map.title=Carte de tous les serveurs
 all-server-map.server-info-btn=Cliquez pour voir les informations du serveur
