--- a/message_ko.properties
+++ b/message_ko.properties
@@ -68,5 +68,7 @@ all-stats.users.select-compare-country.reset-btn=국가 선택 초기화
 all-stats.users.show-all.name=모든 국가 데이터 표시
 all-stats.users.graph.all-country=모든 국가
 all-stats.users.empty-country-data="{countryName}" 국가에 대한 데이터가 존재하지 않습니다.
+all-stats.mod-loader.title=모드 로더 통계
+all-stats.mod-loader.tooltip=모드 로더
 all-server-map.title=전체 서버 지도
 all-server-map.server-info-btn=클릭하여 서버 정보 확인
