--- a/message_tr.properties
+++ b/message_tr.properties
@@ -67,5 +67,7 @@ all-stats.users.select-compare-country.reset-btn=Ülke Seçimini Sıfırla
 all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Tüm Ülkeler
 all-stats.users.empty-country-data="{countryName}" için veri bulunamadı
+all-stats.mod-loader.title=Mod loader statistics
+all-stats.mod-loader.tooltip=Mod Loader
 all-server-map.title=Sunucuların Dünya Haritası
 all-server-map.server-info-btn=Sunucu bilgilerini kontrol etmek için tıklayın
