--- a/message_es.properties
+++ b/message_es.properties
@@ -67,5 +67,7 @@ all-stats.users.select-compare-country.reset-btn=Borrar selección de País
 all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Todos los Países
 all-stats.users.empty-country-data=No hay datos para el País "{countryName}".
+all-stats.mod-loader.title=Mod loader statistics
+all-stats.mod-loader.tooltip=Mod Loader
 all-server-map.title=Mapa de todos los servidores
 all-server-map.server-info-btn=Click para ver la información del servidor
