--- a/message_pl.properties
+++ b/message_pl.properties
@@ -67,5 +67,7 @@ all-stats.users.select-compare-country.reset-btn=Zresetuj wybór kraju
 all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=Wszystkie kraje
 all-stats.users.empty-country-data=Brak danych dla kraju "{countryName}".
+all-stats.mod-loader.title=Mod loader statistics
+all-stats.mod-loader.tooltip=Mod Loader
 all-server-map.title=Mapa serwerów
 all-server-map.server-info-btn=Kliknij, aby sprawdzić informacje o serwerze.
