--- a/message_zh.properties
+++ b/message_zh.properties
@@ -67,5 +67,7 @@ all-stats.users.select-compare-country.reset-btn=重置国家/地区过滤
 all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=所有国家/地区
 all-stats.users.empty-country-data=嘤嘤嘤,还妹有 "{countryName}" 的信息呢
+all-stats.mod-loader.title=Mod loader statistics
+all-stats.mod-loader.tooltip=Mod Loader
 all-server-map.title=服务器大地图
 all-server-map.server-info-btn=点击查看服务器信息
